Sat Jul 15 21:33:22 BST 2006 (njh)
----------------------------------
  * libclamav/message.c:	Some HTML.Phishing.Bank-1 were getting through,
					  Fix by Torok Edvin
					  <edwintorok*gmail.com>

Sat Jul 15 00:15:17 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: initial support for incremental updates

Fri Jul 14 13:14:13 BST 2006 (njh)
----------------------------------
  * libclamav/table.c:	Added tableIterate
  * clamav-milter:	Added black hole mode and IP blacklist support

Fri Jul 14 08:45:04 BST 2006 (njh)
----------------------------------
  * libclamav/table:	Added helper routines to delete items

Wed Jul 12 16:37:44 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Added DONT_SCAN_BLACK_HOLES (off by default)

Wed Jul 12 08:26:11 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Better use of clamav-config.h

Tue Jul 11 18:45:22 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Use tableUpdate() to maintain the blacklist

Tue Jul 11 16:26:46 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Added -I flag based on an idea by
				Dugal James P. <jpd*louisiana.edu>
			Added first draft of blacklist support

Mon Jul 10 19:40:59 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Some HTML.Phishing.Bank-566 were not being found, bug
				reported by Sven

Sat Jul  8 20:57:31 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Optimized the loop reading in the file

Tue Jul  4 09:39:41 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handling of bounce messages

Mon Jul  3 13:09:27 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Multiparts now only create an array when needed

Sat Jul  1 22:04:04 BST 2006 (njh)
----------------------------------
  * libclamav:	More freeing memory earlier

Sat Jul  1 17:18:17 BST 2006 (njh)
----------------------------------